clang/test/CodeGen/RISCV/rvv-intrinsics-handcrafted/zvfbfmin-error.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py
// REQUIRES: riscv-registered-target
// RUN: %clang_cc1 -triple riscv64 -target-feature +v \
// RUN:   -target-feature +experimental-zvfbfmin -disable-O0-optnone  \
// RUN:   -emit-llvm %s -o - | opt -S -passes=mem2reg | \
// RUN:   FileCheck --check-prefix=CHECK-ZVFBFMIN %s

// RUN: not %clang_cc1 -triple riscv64 -target-feature +v \
// RUN:   -target-feature +zvfhmin -emit-llvm-only %s 2>&1 | \
// RUN:   FileCheck %s --check-prefix=CHECK-ZVFBFMIN-ERR

#include <riscv_vector.h>

// CHECK-ZVFBFMIN-LABEL: @test_vle16_v_bf16mf4(
// CHECK-ZVFBFMIN-NEXT:  entry:
// CHECK-ZVFBFMIN-NEXT:    [[TMP0:%.*]] = call <vscale x 1 x bfloat> @llvm.riscv.vle.nxv1bf16.i64(<vscale x 1 x bfloat> poison, ptr [[RS1:%.*]], i64 [[VL:%.*]])
// CHECK-ZVFBFMIN-NEXT:    ret <vscale x 1 x bfloat> [[TMP0]]
//

// CHECK-ZVFBFMIN-ERR: error: call to undeclared function '__riscv_vle16_v_bf16mf4'

vbfloat16mf4_t test_vle16_v_bf16mf4(const __bf16 *rs1, size_t vl) {
  return __riscv_vle16_v_bf16mf4(rs1, vl);
}
